[bugfix] drop shadow on like button not working in dark mode

--- a/network/static/network/themes.css
+++ b/network/static/network/themes.css
@@ -44,7 +44,9 @@
 ._theme_dark {
     --color-page-bg: #34322e;
     --color-alert-1: #fc3d39; /* try d43f4a ? */
+    --color-button-hover-good: #1d86bg;
     --color-button-hover-bad: #d43f3a; /* change */
+    --color-button-hover-like: #310505;
 
     --color-text-default: white; /* change */
 
